--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^12.1.1",
+    "@types/chart.js": "^2.9.24",
     "@types/jest": "^26.0.10",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
@@ -18,10 +19,12 @@
     "@typescript-eslint/parser": "^3.9.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-babel-module": "^5.1.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
@@ -67,5 +70,6 @@
       "json",
       "node"
     ]
-  }
+  },
+  "devDependencies": {}
 }
