--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
+    "axios": "^0.20.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
