--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
@@ -61,6 +62,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/chart.js": "^2.9.27",
     "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
@@ -72,6 +74,7 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-babel-module": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4"
+    "eslint-plugin-prettier": "^3.1.4",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
