--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
+PUBLIC_URL=http://localhost:5000
+REACT_APP_SUBDIRECTORY=admin-template
 REACT_APP_JWT_KEY=JWT_KEY
 REACT_APP_API_PATH=http://localhost:5000/api
 REACT_APP_VERSION=${npm_package_version}
