--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://familrestu-build.herokuapp.com/admin-template",
+  "homepage": "https://www.familrestu.com/admin-template",
   "name": "ersys-admin",
   "version": "0.1.0",
   "private": true,
