remove basename, and normalize post and get

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "familrestu-web",
+  "name": "familrestu-admin-template",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
