--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 REACT_APP_SUBDIRECTORY=admin-template
 REACT_APP_JWT_KEY=JWT_KEY
-REACT_APP_API_PATH=https://familrestu-api.herokuapp.com/api
+REACT_APP_API_PATH=http://localhost:5000/api
 REACT_APP_VERSION=${npm_package_version}
