--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,2 @@
 REACT_APP_JWT_KEY=JWT_KEY
-REACT_APP_API_PATH=http://localhost:5000/api
-REACT_APP_VERSION=${npm_package_version}
+REACT_APP_API_PATH=http://localhost:5000/api/
