--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "familrestu-admin-template",
-  "version": "0.2.11-0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
