--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "start": "serve -s build",
+    "prod-local": "serve -s build -l 3000",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
