--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
+    "axios": "^0.22.0",
+    "bootstrap": "5.1.1",
     "chart.js": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.0",
     "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
@@ -61,7 +61,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.0",
     "@types/chart.js": "^2.9.34",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
@@ -74,7 +74,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "redux-devtools-extension": "^2.13.9"
   }
 }
